2006-03-17 Center postscript output on page when using usetex - DSD

2006-03-17 subprocess module built if Python <2.4 even if subprocess
           can be imported from an egg - ADS

2006-03-17 Added _subprocess.c from Python upstream and hopefully
           enabled building (without breaking) on Windows, although
           not tested. - ADS

2006-03-17 Updated subprocess.py to latest Python upstream and
           reverted name back to subprocess.py - ADS

===============================================================
2006-03-16 Released 0.87.2

2006-03-15 Fixed bug in MaxNLocator revealed by daigos@infinito.it.
           The main change is that Locator.nonsingular now adjusts
           vmin and vmax if they are nearly the same, not just if
           they are equal.  A new kwarg, "tiny", sets the threshold. -
           EF

2006-03-14 Added import of compatibility library for newer numpy
           linear_algebra - TEO

2006-03-12 Extended "load" function to support individual columns and
           moved "load" and "save" into matplotlib.mlab so they can be
           used outside of pylab -- see examples/load_converter.py -
           JDH

2006-03-12 Added AutoDateFormatter and AutoDateLocator submitted
           by James Evans. Try the load_converter.py example for a
           demo. - ADS

2006-03-11 Added subprocess module from python-2.4 - DSD

2006-03-11 Fixed landscape orientation support with the usetex
           option. The backend_ps print_figure method was
           getting complicated, I added a _print_figure_tex
           method to maintain some degree of sanity - DSD

2006-03-11 Added "papertype" savefig kwarg for setting
           postscript papersizes. papertype and ps.papersize
           rc setting can also be set to "auto" to autoscale
           pagesizes - DSD

2006-03-09 Apply P-J's patch to make pstoeps work on windows
           patch report # 1445612 - DSD

2006-03-09 Make backend rc parameter case-insensitive - DSD
